--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,16 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input                       =   null
+    hmm                         =   "https://github.com/nf-core/test-datasets/blob/modules/data/delete_me/hmmer/bac.16S_rRNA.hmm.gz"
 
+
+    // viralVerify optional INPUTS
+    // h                           =   Show the help message and exit
+    // db                          =   Run BLAST on input contigs against provided db
+    t                           =   2
+    thr                         =   7
+    // p                           =   Output predicted plasmidic contigs separately   
 
     // References
     genome                     = null
