first try to add prodigal

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,6 +30,15 @@ process {
         ext.args = '--quiet'
     }
 
+    withName: PRODIGAL {
+        ext.args   = "-p meta"
+        publishDir = [
+            path: { "${params.outdir}/Prodigal/${meta.assembler}/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
