--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     // Input options
     input                       =   null
     hmm                         =   "https://github.com/nf-core/test-datasets/blob/modules/data/delete_me/hmmer/bac.16S_rRNA.hmm.gz"
-
+    // fasta                       =   "https://raw.githubusercontent.com/ablab/viralVerify/master/test/test.fa"
 
     // viralVerify optional INPUTS
     // h                           =   Show the help message and exit
